--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.2",
+    "axios": "^0.19.2",
     "classnames": "^2.2.5",
     "firebase": "^7.15.5",
     "node-sass-chokidar": "^0.0.3",
